--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "ng-openapi-gen": "^0.52.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "^18.2.4",
     "@angular/compiler-cli": "^18.2.0",
     "@openapitools/openapi-generator-cli": "^2.13.5",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.7",
     "jasmine-core": "~5.2.0",
