--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.4",
+    "@angular/material-date-fns-adapter": "^18.2.4",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "canvas-confetti": "^1.9.3",
-    "date-fns": "^4.1.0",
+    "date-fns": "4.0.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
