--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "canvas-confetti": "^1.9.3",
     "date-fns": "4.0.0",
     "lodash": "^4.17.21",
+    "ngx-owl-carousel-o": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
