--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/core": "^19.2.3",
     "@angular/forms": "^19.2.3",
     "@angular/material": "^19.2.5",
+    "@angular/material-date-fns-adapter": "^19.2.5",
     "@angular/platform-browser": "^19.2.3",
     "@angular/platform-browser-dynamic": "^19.2.3",
     "@angular/router": "^19.2.3",
