--- a/cfg/nginx/default.conf
+++ b/cfg/nginx/default.conf
@@ -2,6 +2,11 @@ server {
     listen 8080;
     server_name localhost;
 
+    include /etc/nginx/mime.types;
+    types {
+      application/javascript mjs;
+    }
+
     location / {
         root /var/www/html;
 
