added calendar ui

--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "@angular/platform-browser-dynamic": "^19.2.3",
     "@angular/router": "^19.2.3",
     "@auth0/auth0-angular": "^2.2.3",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/list": "^6.1.17",
+    "@fullcalendar/multimonth": "^6.1.17",
     "angular-split": "^19.0.0",
     "canvas-confetti": "^1.9.3",
     "date-fns": "4.0.0",
