--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "test": "ng test",
     "generate:api": "openapi-generator-cli generate -i http://localhost:3000/api-json -g typescript-angular -o src/app/api/openapi --skip-validate-spec",
     "docker:build": "docker build -t schocken-frontend .",
-    "docker:retag": "docker tag schocken-frontend:latest philippeschild/hoptimisten-frontend:latest",
-    "docker:push": "docker push philippeschild/hoptimisten-frontend:latest",
+    "docker:retag": "docker tag schocken-frontend:latest philippeschild/hoptimisten-frontend:pwa",
+    "docker:push": "docker push philippeschild/hoptimisten-frontend:pwa",
     "docker:release": "npm run docker:build && npm run docker:retag && npm run docker:push"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^19.2.4",
-    "@angular/animations": "^19.2.3",
+    "@angular-devkit/core": "^19.2.15",
+    "@angular/animations": "^19.2.14",
     "@angular/cdk": "^19.2.5",
-    "@angular/common": "^19.2.3",
-    "@angular/compiler": "^19.2.3",
-    "@angular/core": "^19.2.3",
-    "@angular/forms": "^19.2.3",
+    "@angular/common": "^19.2.14",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
+    "@angular/forms": "^19.2.14",
     "@angular/material": "^19.2.5",
     "@angular/material-date-fns-adapter": "^19.2.5",
-    "@angular/platform-browser": "^19.2.3",
-    "@angular/platform-browser-dynamic": "^19.2.3",
-    "@angular/router": "^19.2.3",
+    "@angular/platform-browser": "^19.2.14",
+    "@angular/platform-browser-dynamic": "^19.2.14",
+    "@angular/router": "^19.2.14",
+    "@angular/service-worker": "^19.2.14",
     "@auth0/auth0-angular": "^2.2.3",
     "@fullcalendar/angular": "^6.1.17",
     "@fullcalendar/core": "^6.1.17",
@@ -45,9 +46,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.4",
-    "@angular/cli": "^19.2.4",
-    "@angular/compiler-cli": "^19.2.3",
+    "@angular-devkit/build-angular": "^19.2.15",
+    "@angular/cli": "^19.2.15",
+    "@angular/compiler-cli": "^19.2.14",
     "@openapitools/openapi-generator-cli": "^2.13.5",
     "@types/canvas-confetti": "^1.6.4",
     "@types/jasmine": "~5.1.0",
