--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4202",
+    "start:pwa": "ng serve --configuration production --port 4202",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
